--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqa.jf</groupId>
-	<artifactId>basic-project</artifactId>
+	<artifactId>general-project</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>Basic Project</name>
-	<description>Basic structure for a Maven Java Project</description>
+	<name>General Project</name>
+	<description>General Structure for a Maven Java Project</description>
 	<dependencies>
 		<dependency>
 			<groupId>org.testng</groupId>
