--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqa.jf</groupId>
-	<artifactId>general-project</artifactId>
+	<artifactId>basic-auto-project</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>General Project</name>
-	<description>General Structure for a Maven Java Project</description>
+	<name>Basic Auto Project</name>
+	<description>Basic Automation Structure for a Maven Java Project</description>
 	<dependencies>
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.8.21</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>2.48.2</version>
 		</dependency>
 	</dependencies>
 	<build>
