--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sqa.jf</groupId>
-  <artifactId>java-project</artifactId>
+  <artifactId>temp-project</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Java Project</name>
+  <name>Temp Project</name>
   <description>Project structure for a basic Java project using JUnit testing framework.</description>
   	<dependencies>
 		<dependency>
