--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqa.jf</groupId>
-	<artifactId>basic-auto-project</artifactId>
+	<artifactId>temp-basic-auto-project</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>Basic Auto Project</name>
 	<description>Basic Automation Structure for a Maven Java Project</description>
